# GPURayTracer

./: .gitignore  CMakeLists.txt  EvelynMannProofOfLife.txt  LICENSE  README.md  SConstruct  testfile.txt
CMake/: FindSUtilGLUT.cmake
CUDA/: box.cu  chull.cu  parallelogram.cu  tutorial0.cu  tutorial1.cu  tutorial10.cu  tutorial11.cu  tutorial2.cu  tutorial3.cu  tutorial4.cu  tutorial5.cu  tutorial6.cu  tutorial7.cu  tutorial8.cu  tutorial9.cu
PTX/: tutorial_generated_box.cu.ptx  tutorial_generated_parallelogram.cu.ptx  tutorial_generated_tutorial0.cu.ptx  tutorial_generated_tutorial1.cu.ptx  tutorial_generated_tutorial10.cu.ptx  tutorial_generated_tutorial11.cu.ptx  tutorial_generated_tutorial2.cu.ptx  tutorial_generated_tutorial3.cu.ptx  tutorial_generated_tutorial4.cu.ptx  tutorial_generated_tutorial5.cu.ptx  tutorial_generated_tutorial6.cu.ptx  tutorial_generated_tutorial7.cu.ptx  tutorial_generated_tutorial8.cu.ptx  tutorial_generated_tutorial9.cu.ptx
inc/: Controller.hpp  GPUManager.hpp  GPURayTracer.hpp  Image.hpp  ImageSaverView.hpp  Model.hpp  OptiXRenderView.hpp  ParseJSONController.hpp  RayTraceImageData.h  RenderedImageView.hpp  Scene.hpp  TutorialClass.hpp  commonStructs.h  jsonParameterReader.h  tutorial.h
params/: allDefaults.json  allDefaultsAlt.json  chull_test.json  chulls_test.json  emeraldFort.json  emeraldFortAtMidday.json  emeraldFortAtTwilight.json  emeraldFortBright.json  fort.json  fortTwilight.json  fr1.json  fr1_bright.json  fr1_dim.json  fr1_negBrightness.json  fr2.json  fr3-alt.json  fr3.json  fr3_bright.json  fr4.json  fr5.json  (+12 more)
(+15 files in other folders)
